--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -341,17 +341,11 @@ form {
         color: #0FA3B1;
     }
 
-
-.heading{font-size: 50px;}
-
-@media all and (min-width: 768px) and (max-width: 800px){
-  .heading{font-size: 40px;}
-}
-
-@media all and (min-width: 400px) and (max-width: 480px){
-  .heading{font-size: 30px;}
-}
-
-@media all and (min-width: 320px) and (max-width: 375px){
- .heading{font-size: 20px;}
+@media screen and (min-width: 768px) {
+  li.resizable {
+    font-size: 63px;
+  }
+ nav.resizable {
+    font-size: 63px;
+  }
 }
