--- a/bootstrap.css
+++ b/bootstrap.css
@@ -8971,5 +8971,18 @@ a.text-dark:hover, a.text-dark:focus {
   .table-bordered td {
     border: 1px solid #ddd !important;
   }
+  @media only screen and (max-width: 268px) {
+    .navbar-inverse {
+    background-color: #fff;
+    border-color: transparent;
+    height: 50px;
+    }
+}
+  @media only screen and (max-width: 268px) {
+    .navbar-inverse {
+    background-color: #fff;
+    border-color: transparent;
+    height: 50px;
+    }
 }
 /*# sourceMappingURL=bootstrap.css.map */
