--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -43,15 +43,9 @@ header h1 {
   width: 100%; 
 }
 
-.pie-chart{
-width:400px;
-  height:160px;
-
-
-}
 
 nav {
-  width:1500px;
+  width:100%;
   height:60px;
   background: #292f36;
   postion:fixed;
@@ -63,7 +57,7 @@ nav ul {
   margin: 0 auto;
   padding-left:0;
   text-align:right;
-  width: 1500px; 
+  width: 960px; 
   max-width: 100%;
 }
 
