--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -24,6 +24,13 @@
 	-ms-box-sizing: border-box;
 }
 
+html, body{
+    height: 100%;
+    width: 100%;
+    color: #222;
+}
+
+
 
 header {
   height:36px;
@@ -52,23 +59,16 @@ nav {
   z-index:10;
 }
 
-nav ul { 
-  list-style-type: none;
-  margin: 0 auto;
-  padding-left:0;
-  text-align:right;
-  width: 960px; 
-  max-width: 100%;
+.navbar {
+  padding: .8rem;
 }
 
-nav ul li { 
-  display: inline-block; 
-  line-height: 60px;
-  margin-left: 10px;
+navbar-nav li { 
+  padding-right: 20px;
 }
-nav ul li a {
-  text-decoration: none; 
-  color: #a9abae;
+
+.nav-link { 
+  font-size: 1.1em !important;
 }
 
 body {
