--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -51,13 +51,7 @@ header h1 {
 }
 
 
-nav {
-  width:100%;
-  height:60px;
-  background: #292f36;
-  postion:fixed;
-  z-index:10;
-}
+
 
 .navbar {
   padding: .8rem;
@@ -69,6 +63,9 @@ navbar-nav li {
 
 .nav-link { 
   font-size: 1.1em !important;
+}
+a, a:visited, a:hover {
+  text-decoration: none;
 }
 
 body {
